fix Library section horizontal scroll

--- a/src/components/templates/SubcontentBlock/subcontent-block.css
+++ b/src/components/templates/SubcontentBlock/subcontent-block.css
@@ -60,6 +60,7 @@
 
 .subcontent-block__tags-wrapper {
   display: flex;
+  height: 28px;
   gap: 5px;
 
   @media (max-width: 576px) {
